<resources>
    <string name="app_name">Flop Mine</string>

    <string name="back_twice_toast">再按一次退出</string>

    <!--新游戏页面标题-->
    <string name="settings">设置</string>
    <!--新游戏界面级别设置-->
    <string name="settingsLevel">级别</string>
    <string name="levelBeg">初级</string>
    <string name="levelInt">中级</string>
    <string name="levelExp">高级</string>
    <!--新游戏界面震动设置-->
    <string name="settingsVibration">震动</string>
    <string name="longClickVibration">长按</string>
    <string name="winVibration">胜利</string>
    <string name="loseVibration">失败</string>

    <string name="shareMinesweeper">分享</string>

    <string name="newGame">新游戏</string>
    <string name="saoleiNews">雷界快讯</string>
    <string name="saoleiNew">最新录像</string>
    <string name="section_format">敬请期待</string>

    <string name="tab_text_1">雷界快讯</string>
    <string name="tab_text_2">最新录像</string>
    <string name="tab_text_3">排行榜</string>
    <string name="tab_text_4">全部录像</string>
    <string name="tab_text_5">我的地盘</string>
    <string name="tab_text_6">进步历程</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Flop Mine</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--侧边栏标题-->
    <string name="menu_gallery_title">新游戏</string>
    <string name="menu_file_title">本地录像</string>
    <string name="menu_settings_title">设置</string>
    <string name="menu_about_title">关于</string>

    <!--顶部导航栏-->
    <string name="action_filter">筛选</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- 设置页面 -->
    <string name="activity_settings_title">设置</string>
    <!--我的地盘 / 进步历程-->
    <string name="prefs_domain_progress_header">我的地盘 / 进步历程</string>
    <!--默认ID-->
    <string name="prefs_domain_progress_id_key" translatable="false">prefs_domain_progress_id_key</string>
    <string name="prefs_domain_progress_id_title">默认ID</string>
    <string name="prefs_domain_progress_id_default" translatable="false">14512</string>
    <!--本地录像-->
    <string name="prefs_local_video_header">本地录像</string>
    <!--是否记住录像路径-->
    <string name="prefs_remember_path_key" translatable="false">prefs_remember_path_key</string>
    <string name="prefs_remember_path_off">从根目录开始选择本地录像文件</string>
    <string name="prefs_remember_path_on">记住上次选择本地录像文件时的路径</string>
    <string name="prefs_remember_path_title">记住路径</string>
    <!--默认路径-->
    <string name="prefs_default_path_key">prefs_default_path_key</string>
    <string name="prefs_default_path_title" translatable="false">当前默认路径</string>
    <!--其他-->
    <string name="prefs_other_header">其他</string>

    <!-- 关于页面 -->
    <string name="activity_about_title">关于</string>
    <string name="about_other_header">其他</string>
    <string name="about_other_summary">查看本项目使用的开源库和资源</string>
    <!--应用相关-->
    <string name="about_app_header">应用</string>
    <string name="about_source">项目开源主页</string>
    <string name="about_source_url" translatable="false"><u>https://github.com/hgraceb/FLopMinesweeper</u></string>
    <string name="about_data">数据来源网站</string>
    <string name="about_data_url" translatable="false"><u>http://www.saolei.wang/Main/Index.asp</u></string>
    <string name="about_author_domain">作者雷网主页</string>
    <string name="about_author_domain_url" translatable="false"><u>http://www.saolei.wang/Player/Index.asp?Id=14512</u></string>
    <string name="about_author_blog">作者博客</string>
    <string name="about_author_blog_url" translatable="false"><u>https://hgraceb.github.io/</u></string>
    <!--检查更新-->
    <string name="about_update_check_key" translatable="false">settings_update_check_key</string>
    <string name="about_update_check_title">检查更新</string>
    <string name="about_update_check_summary">当前版本：%1$s&#160;&#160;(%2$s)</string>
    <!--反馈相关-->
    <string name="about_feedback_header">反馈</string>
    <string name="about_qq_group">QQ交流群</string>
    <string name="about_qq_group_number" translatable="false">823364726</string>
    <string name="about_qq_group_key" translatable="false">about_qq_group_key</string>
    <string name="about_qq_group_wrong_toast">未安装手机QQ或安装的版本不支持</string>
    <string name="about_issues" translatable="false">Github issues</string>
    <string name="about_issues_url" translatable="false"><u>https://github.com/hgraceb/FLopMinesweeper/issues</u></string>
    <!--开放源代码相关-->
    <string name="about_open_source_header">开放源代码</string>
    <string name="about_androidx" translatable="false">AndroidX</string>
    <string name="about_androidx_url" translatable="false"><u>https://developer.android.com/jetpack/androidx</u></string>
    <string name="about_butter_knife" translatable="false">Butter Knife</string>
    <string name="about_butter_knife_url" translatable="false"><u>https://github.com/JakeWharton/butterknife</u></string>
    <string name="about_hawk" translatable="false">Hawk</string>
    <string name="about_hawk_url" translatable="false"><u>https://github.com/orhanobut/hawk</u></string>
    <string name="about_jsoup" translatable="false">jsoup</string>
    <string name="about_jsoup_url" translatable="false"><u>https://github.com/jhy/jsoup</u></string>
    <string name="about_junit4" translatable="false">JUnit 4</string>
    <string name="about_junit4_url" translatable="false"><u>https://github.com/junit-team/junit4</u></string>
    <string name="about_leak_canary" translatable="false">LeakCanary</string>
    <string name="about_leak_canary_url" translatable="false"><u>https://github.com/square/leakcanary</u></string>
    <string name="about_material_components" translatable="false">Material Components for Android</string>
    <string name="about_material_components_url" translatable="false"><u>https://github.com/material-components/material-components-android</u></string>
    <string name="about_material_design_icons" translatable="false">Material design icons</string>
    <string name="about_material_design_icons_url" translatable="false"><u>https://github.com/google/material-design-icons</u></string>
    <string name="about_material_file_picker" translatable="false">Material File Picker</string>
    <string name="about_material_file_picker_url" translatable="false"><u>https://github.com/nbsp-team/MaterialFilePicker</u></string>
    <string name="about_video_format" translatable="false">Open, human-readable minesweeper video format</string>
    <string name="about_video_format_url" translatable="false"><u>https://minesweepergame.com/forum/viewtopic.php?t=86</u></string>
    <string name="about_smart_refresh_layout" translatable="false">SmartRefreshLayout</string>
    <string name="about_smart_refresh_layout_url" translatable="false"><u>https://github.com/scwang90/SmartRefreshLayout</u></string>
    <string name="about_update" translatable="false">update</string>
    <string name="about_update_url" translatable="false"><u>https://github.com/czy1121/update</u></string>
    <string name="about_volley" translatable="false">Volley</string>
    <string name="about_volley_url" translatable="false"><u>https://github.com/google/volley</u></string>

    <!--文件选择-->
    <string name="activity_file_title">选择文件</string>
    <string name="type_video">视频</string>
    <string name="empty_directory_hint">无可选文件</string>
    <string name="action_close">关闭</string>
    <string name="type_archive">压缩包</string>
    <string name="type_certificate">证书</string>
    <string name="type_directory">目录</string>
    <string name="type_document">文件</string>
    <string name="type_drawing">图片</string>
    <string name="type_excel">EXCEL</string>
    <string name="type_image">照片</string>
    <string name="type_music">音乐</string>
    <string name="type_pdf">PDF</string>
    <string name="type_power_point">PPT</string>
    <string name="type_word">WORD</string>
    <string name="type_apk">APK</string>
    <string name="file_desc">%1$s&#160;&#160;|&#160;&#160;%2$s</string>
    <!--选择本地录像时的标题-->
    <string name="activity_local_video_title">本地录像</string>
</resources>