<!--用户设置页面主页面-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--app:iconSpaceReserved：没有图标时是否保留图标的位置-->
    <!--app:title 默认不可点击，android:title 默认可点击-->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/prefs_domain_progress_header">

        <!--app:useSimpleSummaryProvider：是否显示摘要-->
        <!--使用自定义TextPreference，自定义对话框-->
        <com.flop.minesweeper.ui.TextPreference
            app:defaultValue="@string/prefs_domain_progress_id_default"
            app:enableCopying="true"
            app:iconSpaceReserved="false"
            app:key="@string/prefs_domain_progress_id_key"
            app:title="@string/prefs_domain_progress_id_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/prefs_local_video_header">

        <!--是否记住录像路径-->
        <SwitchPreferenceCompat
            android:key="@string/prefs_remember_path_key"
            android:summaryOff="@string/prefs_remember_path_off"
            android:summaryOn="@string/prefs_remember_path_on"
            app:defaultValue="@bool/prefs_remember_path_default"
            app:iconSpaceReserved="false"
            app:title="@string/prefs_remember_path_title" />

        <!--当前默认路径-->
        <Preference
            app:dependency="@string/prefs_remember_path_key"
            app:enableCopying="true"
            app:iconSpaceReserved="false"
            app:key="@string/prefs_default_path_key"
            app:title="@string/prefs_default_path_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:title="@string/prefs_other_header">

        <!--以下为测试代码，记得修改或删除-->
        <Preference
            app:enableCopying="true"
            app:fragment="com.flop.minesweeper.activity.SettingsActivity$AdvancedFragment"
            app:iconSpaceReserved="false"
            app:summary="高级设置"
            app:title="查看高级设置" />

    </PreferenceCategory>

</PreferenceScreen>
