<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!--用户设置-->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--app:iconSpaceReserved：没有图标时是否保留图标的位置-->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="我的地盘 / 进步历程">

        <!--app:useSimpleSummaryProvider：是否显示摘要-->
        <EditTextPreference
            app:defaultValue="14512"
            app:iconSpaceReserved="false"
            app:key="ID"
            app:title="默认ID"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--以下为测试代码，记得删除-->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:title="@string/messages_header">

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:iconSpaceReserved="false"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:iconSpaceReserved="false"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
