<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipChildren="false"
    android:paddingBottom="?attr/actionBarSize">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_bottom"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:clipChildren="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <!--contentInsetStartWithNavigation属性解决Support包24以上Home键右边距留白问题-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bar_tool"
            android:fitsSystemWindows="true"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOrder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="全部"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text" />

                <ImageView
                    android:id="@+id/ivOrder"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/menu_three_point"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:focusable="true" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fitsSystemWindows="true"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/colorAccent"
                app:tabTextColor="@color/tabItem">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1"
                    android:textSize="@dimen/little_text" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabLatest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2"
                    android:textSize="@dimen/little_text" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabRank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3"
                    android:textSize="@dimen/little_text" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_4"
                    android:textSize="@dimen/little_text" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabDomain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_5"
                    android:textSize="@dimen/little_text" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_6"
                    android:textSize="@dimen/little_text" />

            </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>